# anica

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
crates/ai-subtitle-engine/: Cargo.toml
crates/ai-subtitle-engine/src/: cloud_api_connect.rs  main.rs
crates/gpui-video-renderer/: Cargo.toml
crates/gpui-video-renderer/src/: element.rs  lib.rs
crates/media_gen_protocol/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/media_gen_protocol/examples/: minimal_submit_poll.rs  provider_options.rs
crates/media_gen_protocol/src/: lib.rs
crates/media_gen_protocol/src/auth/: key_resolver.rs  mod.rs
crates/media_gen_protocol/src/error/: code.rs  mod.rs  protocol_error.rs
crates/media_gen_protocol/src/gateway/: context.rs  mod.rs  service.rs
crates/media_gen_protocol/src/http/: client.rs  mod.rs  retry.rs
crates/media_gen_protocol/src/job/: mod.rs  polling.rs  scheduler.rs  store.rs
crates/media_gen_protocol/src/model/: mod.rs  registry.rs  resolution_catalog.rs  route_key.rs
crates/media_gen_protocol/src/output/: mod.rs  normalizer.rs  uploader.rs
crates/media_gen_protocol/src/protocol/: asset.rs  job.rs  mod.rs  request.rs  response.rs
crates/media_gen_protocol/src/provider/: bfl_flux.rs  luma.rs  mod.rs  runway.rs  stability.rs
crates/media_gen_protocol/src/provider/google_genai/: mod.rs
crates/media_gen_protocol/src/provider/google_genai/models/: gemini_2_5_flash_image.rs  gemini_3_1_flash_image_preview.rs  gemini_3_pro_image_preview.rs  mod.rs  veo_3_1.rs
crates/media_gen_protocol/src/provider/openai/: mod.rs
crates/media_gen_protocol/src/provider/openai/models/: gpt_image_1.rs  gpt_image_1_5.rs  gpt_image_1_mini.rs  mod.rs  sora_2.rs  sora_2_pro.rs
crates/media_gen_protocol/src/webhook/: callback.rs  mod.rs
crates/media_gen_protocol/tests/: error_normalization.rs  protocol_serde.rs  route_key_validation.rs
crates/motionloom/: AGENTS.md  CHANGELOG.md  Cargo.toml  LLM_AUTHORING.md  PUBLIC_API.md  README.md
crates/motionloom/benchmarks/path-dsl/: README.md
crates/motionloom/examples/: hello_process.rs  hello_scene.rs  inspect_compat.rs  path_dsl_benchmark.rs  png_sequence.rs  preview_texture.rs  process_catalog.rs  profile_scene_dsl.rs  render_file_frame.rs  render_file_frame_gpu.rs  render_file_video.rs  render_frame.rs  render_frame_to_wgpu_texture.rs  video_export.rs  wgpu_live_preview.rs
crates/motionloom/examples/wgpu_live_preview/: preview_host_platform.rs
crates/motionloom/src/: api.rs  asset.rs  backend.rs  compat.rs  dsl.rs  effect_kernel_map.rs  effects.rs  error.rs  experimental.rs  graph.rs  lib.rs  model.rs  prelude.rs  preview.rs  preview_adapter.rs  preview_protocol.rs  process_catalog.rs  root.rs  runtime.rs  scene.rs  scene_render.rs  transitions.rs  wasm_api.rs
crates/motionloom/src/animation/: dsl.rs  gltf_loader.rs  mod.rs  model.rs  render.rs
crates/motionloom/src/clip/: export_adapter.rs  mod.rs
crates/motionloom/src/common/: backend.rs  curve.rs  error.rs  keyframe.rs  mod.rs  pass.rs  process_catalog.rs  runtime.rs
crates/motionloom/src/common/gpu_async/: mod.rs  native.rs  wasm.rs
crates/motionloom/src/export/: mod.rs  native.rs  wasm.rs
crates/motionloom/src/kernels/: effect_kernel_map.kv
crates/motionloom/src/kernels/process/blur_sharpen_detail/: blur_sharpen_detail_gaussian.wgsl
crates/motionloom/src/kernels/process/color_tone/: color_core.wgsl
crates/motionloom/src/kernels/process/keying_matte_mask/: keying_matte_mask_luma_key.wgsl
crates/motionloom/src/kernels/process/light_atmosphere/: light_atmosphere_bloom_prefilter.wgsl
crates/motionloom/src/kernels/process/stylize_look/: stylize_look_posterize.wgsl
crates/motionloom/src/kernels/process/transform_camera/: transform_camera_affine.wgsl
crates/motionloom/src/process/: cpu_effects.rs  cpu_renderer.rs  dsl.rs  effect.rs  effect_kind.rs  error.rs  graph.rs  mod.rs  model.rs  parser.rs  pass.rs  process_catalog.rs  runtime.rs  wasm_webgpu.rs
crates/motionloom/src/process/kernels/: README.md  effect_kernel_map.kv
crates/motionloom/src/scene/: dsl.rs  editor_keyframes.rs  error.rs  mod.rs  model.rs  preview_surface.rs  render.rs
crates/motionloom/src/scene/backend/: encoding.rs  mod.rs  sizing.rs
crates/motionloom/src/scene/compile/: compat.rs  mod.rs
crates/motionloom/src/scene/composition/: effects.rs  mod.rs  raster.rs
crates/motionloom/src/scene/domain/: action.rs  mod.rs  skeleton.rs
crates/motionloom/src/scene/drawable/: face_jaw.rs  geometry.rs  gpu.rs  mod.rs  paint.rs  path_morph.rs  raster.rs  stroke.rs
crates/motionloom/src/scene/render/: depth.rs
crates/motionloom/src/scene/resource/: assets.rs  defs.rs  fonts.rs  mod.rs
crates/motionloom/src/scene/spatial/: camera.rs  deform.rs  mod.rs  transform.rs
crates/motionloom/src/scene/text/: animator.rs  layout.rs  mod.rs  model.rs  render.rs  selector.rs  style.rs
crates/motionloom/src/scene/timeline/: mod.rs  repeat.rs  time.rs
crates/motionloom/src/simulation/: clock.rs  compile.rs  dsl.rs  error.rs  mod.rs  model.rs  runtime.rs  state.rs
crates/motionloom/src/simulation/bodies/: dynamic_curve.rs  mod.rs
crates/motionloom/src/simulation/bridge/: mod.rs  scene.rs
crates/motionloom/src/simulation/cache/: memory.rs  mod.rs
crates/motionloom/src/simulation/collision/: mod.rs  shapes.rs
crates/motionloom/src/simulation/constraints/: distance.rs  mod.rs  pin.rs
crates/motionloom/src/simulation/forces/: gravity.rs  mod.rs  wind.rs
crates/motionloom/src/simulation/solvers/: mod.rs  verlet.rs
crates/motionloom/src/world/: dsl.rs  error.rs  gltf_loader.rs  mod.rs  model.rs  render.rs
crates/motionloom/src/world/retarget/: humanoid_v1.json  humanoid_v1.md
crates/motionloom/tests/: example_scripts.rs  scene_render_api.rs  wasm_browser_smoke.rs
crates/motionloom/wasm-smoke-test/: README.md  index.html
crates/video-engine/: Cargo.toml  build.rs
crates/video-engine/src/: error.rs  lib.rs  video.rs
(+312 files in other folders)
