[package]
name = "ai-subtitle-engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
hound = "3.5"
tokenizers = { version = "0.19", features = ["onig"] }
rustfft = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
base64 = "0.22"

ort = { version = "2.0.0-rc.11" }
