[package]
name = "media_gen_protocol"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Provider-agnostic protocol types for image/video generation gateways."

[dependencies]
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
