[package]
name = "motionloom"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
exmex = "0.20"
thiserror = "2.0.17"
base64 = "0.22.1"
cosmic-text = { version = "0.14.2", features = ["swash"] }
image = "0.25.9"
pollster = "0.4.0"
resvg = { version = "0.45.1", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }
ureq = "2.12.1"
url = "2.5.7"
wgpu = "25.0.1"
