[package]
name = "motionloom"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "MotionLoom DSL parser and renderer for video effects, scene graphs, motion graphics, and world graphs."
repository = "https://github.com/LOVELYZOMBIEYHO/anica"
homepage = "https://github.com/LOVELYZOMBIEYHO/anica"
documentation = "https://docs.rs/motionloom"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
exmex = "0.20"
thiserror = "2.0.17"
base64 = "0.22.1"
cosmic-text = { version = "0.14.2", features = ["swash"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
resvg = { version = "0.45.1", default-features = false, features = ["text"] }
url = "2.5.7"
wgpu = "25.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"
ureq = "2.12.1"
resvg = { version = "0.45.1", default-features = false, features = ["text", "system-fonts", "memmap-fonts"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["HtmlCanvasElement"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"
